--- a/package.json
+++ b/package.json
@@ -7,23 +7,43 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create:ui": "gvegas-cfc create -t ./lib/templates/UITemplate -o ./src/shared/UI",
+    "sb": "storybook dev -p 6006 -c ./config/storybook",
+    "build-sb": "storybook build"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.4.3",
+    "@storybook/addon-interactions": "7.4.3",
+    "@storybook/addon-links": "7.4.3",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.4.3",
+    "@storybook/react": "7.4.3",
+    "@storybook/react-vite": "7.4.3",
+    "@storybook/testing-library": "0.2.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^0.6.13",
+    "sass": "^1.67.0",
+    "storybook": "7.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-pwa": "^0.16.5"
+    "vite-plugin-pwa": "^0.16.5",
+    "vite-plugin-svgr": "^4.0.0"
   }
 }
