--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* Plugins */
+    "types": ["vite-plugin-svgr/client"],
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
